[package]
name = "arena-rs"
version = "0.1.0"
description = "An arena memory pool for fast heap allocations and dealocations"
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
homepage = "https://github.com/BrokenLamp/Arena-rs"
repository = "https://github.com/BrokenLamp/Arena-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
